# atlaserp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  docker-compose.local-lite.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts  seed_output.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
codex/: 00_MASTER_PROMPT.md
docs/: 00_project_status.md  01_erp_architecture.md  02_module_system.md  03_core_modules.md  03_custom_modules.md  04_onboarding_setup.md  05_supabase_prisma_strategy.md  06_deployment_strategy.md  07_auth_permissions_strategy.md  08_blueprints.md  09_next_steps.md  10_brand_assets_strategy.md  ARCHITECTURE.md  BLUEPRINTS.md  CODE_STYLE.md  DEPLOY_VPS_DEV.md  DOCKER.md  MODULE_SYSTEM.md  SUPABASE_SELF_HOSTED_SCENARIO.md  TASKS.md  module-quality-standards.md  spec-driven-development.md
identity/: README.md
prisma/: schema.prisma  seed.js
scripts/: build-brand-assets.mjs  check-module-manifest-migrations.mjs  check-supabase-advisor-equivalent.mjs  enforce-uuid-policy.mjs  export-ame3-devkit.mjs  fix-atlas-chat-bucket.js  gen-icons.mjs  generate-transparent-brand-assets.py  migrate-legacy-permissions-to-granular.mjs  migrate-website-images-to-public.mjs  patch-fleet-financing-visibility.mjs  scaffold-module.js  seed-core-modules.js  smoke-fleet-relational.mjs  (+5 more)
(+1509 files in other folders)
