[package]
name = "atlas_erp"
version = "0.2.0"
description = "Atlas ERP Desktop"
authors = ["Racoon Devs"]
edition = "2021"

[lib]
name = "atlas_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
